# infradesk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLUSTER_SOURCE_MANAGEMENT.md  K8S_AUTO_PORTFORWARD_FIX.md  K8S_DISCOVERY_DEPLOYMENT.md  K8S_DISCOVERY_USAGE.md  K8S_IMPORT_FORCE_OVERRIDE.md  K8S_IMPORT_TESTING_GUIDE.md  KUBECONFIG_FORMAT.md  Makefile  PORT_FORWARD_DEPLOYMENT.md  PORT_FORWARD_IMPLEMENTATION_SUMMARY.md  PORT_FORWARD_QUICKSTART.md  README.md  deploy-force-override.sh  justfile  ralph.yml
.agent/metrics/: metrics_20260109_110834.json
.github/workflows/: build.yml
.kiro/specs/api-adapter-tauri-backend/: design.md  requirements.md  tasks.md
.kiro/specs/cross-platform-desktop-app/: design.md  requirements.md  tasks.md
.kiro/specs/helm-config-management/: design.md  requirements.md  tasks.md
.kiro/specs/mysql-table-editing/: design.md  requirements.md  tasks.md
archive/: CLAUDE.md
archive/config/helm/: README.md
archive/helm/infradesk/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
archive/rust-http/: server.rs
archive/rust-http/http/: mod.rs
archive/scripts/: check.sh
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/configs/: dev.yaml  test.yaml
backend/internal/api/: cluster.go  k8s.go  mysql.go  portforward.go  redis.go  router.go
backend/internal/config/: config.go
backend/internal/k8s/: client.go  portforward.go
backend/internal/service/: forward_monitor.go  mysql.go  redis.go
backend/internal/store/: sqlite.go
config/env/: .env.example
config/helm/: .gitignore
deploy/docker/: docker-compose.yml
deploy/k8s/: ingress.yaml
deploy/k8s/base/: deployment.yaml  kustomization.yaml  rbac.yaml  secret.yaml  service.yaml
frontend/: Dockerfile  tsconfig.node.tsbuildinfo  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: index.ts
frontend/src/components/: AppLayout.vue  ConnectionSelector.vue  ServiceDiscovery.vue
frontend/src/router/: index.ts
frontend/src/stores/: mysql.ts  redis.ts
frontend/src/styles/: main.css
frontend/src/views/: Home.vue  PortForwardView.vue
helm/zeni-x/: .helmignore  Chart.yaml  README.md  values-dev.secret.example  values-dev.yaml  values-prod.secret.example  values-prod.yaml  values-test.secret.example  values-test.yaml  values-uat.secret.example  values-uat.yaml  values.schema.json  values.yaml
helm/zeni-x/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  job-init-db.yaml  job-migrate-db.yaml  namespace.yaml  pvc.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml
k8s/overlays/test/: kustomization.yaml  patch.yaml
k8s/overlays/uat/: kustomization.yaml  patch.yaml
k8s/secrets/: secrets.example.yaml
prompts/: PROMPT.md
scripts/: build.sh  deploy.sh  load-env.sh  vite-log-pipe.sh
services/infradesk/frontend/: FIX_PLAN.md  index.html  package.json  vite.config.ts
services/zeni-x/backend/: Dockerfile  go.mod
services/zeni-x/frontend/: CLAUDE.md  TEST_REPORT.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/icons/backup/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: cluster.rs  connection.rs  history.rs  k8s.rs  k8s_favorite.rs  llm_config.rs  mod.rs  mysql.rs  port_forward.rs  redis.rs  saved_query.rs  settings.rs
src-tauri/src/db/: mod.rs  models.rs  sqlite.rs
src-tauri/src/http/: mod.rs
src-tauri/src/services/: cluster.rs  connection.rs  crypto.rs  k8s.rs  keyring.rs  llm_config.rs  log_service.rs  mod.rs  mysql.rs  port_forward.rs  redis.rs  settings.rs
(+110 files in other folders)
