[package]
name = "zeni-x"
version = "0.1.0"
description = "Zeni-X Database Management Platform"
authors = ["Zeni-X Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zeni_x_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Database drivers
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Symmetric encryption for password storage
aes-gcm = "0.10"
rand = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4", "serde"] }

# Kubernetes client
kube = { version = "0.93", features = ["client", "config", "rustls-tls", "ws"] }
k8s-openapi = { version = "0.22", features = ["v1_30"] }

# Base64 encoding for secrets
base64 = "0.22"

# URL encoding for connection strings
urlencoding = "2"

# Cross-platform directories
dirs = "5"

# HTTP server (for web debug mode)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
# Testing
mockall = "0.13"
tempfile = "3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
# Optimize for size
lto = true
opt-level = "s"
strip = true
codegen-units = 1
